--- a/core/templates/guest.html
+++ b/core/templates/guest.html
@@ -5,168 +5,168 @@
 
 <html>
 <head>
-	<title>{{ title }}</title>
+    <title>{{ title }}</title>
 
-	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
-	<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
-	<!-- Roboto font -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store" />
+    <link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
+    <!-- Roboto font -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-	<!-- jQuery & jQuery UI -->
-	<script type="text/javascript" src="{% static 'js/vendor/jquery-3.1.0.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vendor/jquery-ui.js' %}"></script>
+    <!-- jQuery & jQuery UI -->
+    <script type="text/javascript" src="{% static 'js/vendor/jquery-3.1.0.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vendor/jquery-ui.js' %}"></script>
 
-  	<!-- Bootstrap and themes (material) -->
-	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/material.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/datepicker.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/alertify.min.css' %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/themes/bootstrap.css' %}">
-	<script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-acessibility.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vendor/material.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vendor/ripples.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vendor/bootstrap-datepicker.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/vendor/alertify.min.js' %}"></script>
+    <!-- Bootstrap and themes (material) -->
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-3.3.7/css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/material.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/ripples.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/datepicker.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/alertify.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendor/alertifyjs/themes/bootstrap.css' %}">
+    <script type="text/javascript" src="{% static 'bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vendor/bootstrap-acessibility.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vendor/material.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vendor/ripples.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vendor/bootstrap-datepicker.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/vendor/alertify.min.js' %}"></script>
 
-  	<!-- Font awesome -->
-	<link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
+    <!-- Font awesome -->
+    <link rel="stylesheet" type="text/css" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
 
-	<!-- Custom styles -->
-  	<link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
+    <!-- Custom styles -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base/amadeus.css' %}">
 
-	<!-- Init material Bootstrap -->
-	<script type="text/javascript">$.material.init()</script>
+    <!-- Init material Bootstrap -->
+    <script type="text/javascript">$.material.init()</script>
 
-	<!--Javascript block for specific-app ones -->
-	<script src="{% static 'js/base/amadeus.js' %}"></script>
-	{% block style %}
-	{% endblock %}
-	{% block javascript %}
-		<script type="text/javascript" src="{% static 'js/course.js' %}"></script>
-	{% endblock %}
+    <!--Javascript block for specific-app ones -->
+    <script src="{% static 'js/base/amadeus.js' %}"></script>
+    {% block style %}
+    {% endblock %}
+    {% block javascript %}
+        <script type="text/javascript" src="{% static 'js/course.js' %}"></script>
+    {% endblock %}
 </head>
 <body>
-	{% block nav %}
-   	<div class="navbar navbar-default">
-         		<div class="navbar-header">
-           		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-             			<span class="icon-bar"></span>
-             			<span class="icon-bar"></span>
-             			<span class="icon-bar"></span>
-           		</button>
-           		<a class="navbar-brand" href="{% url 'app:index' %}"><img class="logo" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo"/></a>
-         		</div>
-         		<div class="navbar-collapse collapse navbar-responsive-collapse">
-           		<ul class="nav navbar-nav navbar-right notifications">
-             			 <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">
+    {% block nav %}
+    <div class="navbar navbar-default">
+                <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'app:index' %}"><img class="logo" src="{% static 'img/topo-amadeus-white.png'  %}" alt="Logo"/></a>
+                </div>
+                <div class="navbar-collapse collapse navbar-responsive-collapse">
+                <ul class="nav navbar-nav navbar-right notifications">
+                         <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">
                  <a  class="dropdown-toggle" data-toggle="dropdown"> <span id="notification-count" class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell" aria-hidden="true"></i></a>
                    <ul id="notification-dropdown" class="dropdown-menu">
-                   <li class="dropdown-header">{% trans 'Notifications' %}</li>
-                   		{% include "notifications.html" %}
+                   <li class="dropdown-header">Notifications</li>
+                        {% include "notifications.html" %}
 
-                   		<li>
-                   		 <a onclick="getNotifications(5)">
-                   			<div id="notification-see-more" class="list-group-item">
+                        <li>
+                         <a onclick="getNotifications(5)">
+                            <div id="notification-see-more" class="list-group-item">
                                   <div class="row-content">
-                                    <p class="list-group-item-text">{% trans 'See More' %}</p>
+                                    <p class="list-group-item-text">See More</p>
                                 </div>
                        </a>
-                   		</li>
+                        </li>
                     </ul>
                </li>
 
-             			<li  data-toggle="tooltip" data-placement="bottom" title data-original-title="{% trans 'messages' %}"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-             			<li > <a  class="link" href="{% url 'app:index' %}">{{ user }}</a></li>
-             			
-           		</ul>
-         		</div>
-   	</div>
-	{% endblock %}
-	<div class="container-fluid">
-		<div class="row">
+                        <li  data-toggle="tooltip" data-placement="bottom" title data-original-title="{% trans 'messages' %}"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
+                        <li > <a  class="link" href="{% url 'app:index' %}">{{ user }}</a></li>
 
-    		<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
-    			{% block sidebar %}
-    				<div class="panel panel-primary navigation">
-				        <div class="panel-heading">
-				            <h4>{% trans 'Menu' %}</h4>
-				        </div>
-				        <div class="panel-body">
-				            <ul class="nav nav-pills nav-stacked">
-				                <li><a href="{% url 'core:register' %}">{% trans 'Register' %}</a></li>
-				            </ul>
-				        </div>
-				    </div>
-    			{% endblock %}
+                </ul>
+                </div>
+    </div>
+    {% endblock %}
+    <div class="container-fluid">
+        <div class="row">
 
-    		</div>
-		   <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
-				{% block breadcrumbs %}
-					<div class="col-md-12">
-						<form id="searchform" action="{% url 'course:manage' %}" method="get" accept-charset="utf-8">
-							<div class="input-group">
-							  <div class="form-group is-empty">
-							  <input type="search" class="form-control" placeholder="Search Courses" name="q" id="searchbox"></div>
-							    <span class="input-group-btn input-group-sm">
-							      <button type="button" class="btn btn-fab btn-fab-mini">
-							        <i class="material-icons">search</i>
-							      </button>
-							    </span>
-							</div>
-						</form>
-					</div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+                {% block sidebar %}
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h4>Menu</h4>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="nav nav-pills nav-stacked">
+                                <li><a href="{% url 'core:register' %}">{% trans 'Register' %}</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                {% endblock %}
 
-				<div class="col-md-12">
-					<div class="btn-group btn-group-justified btn-group-raised">
-						<a href="?category=all" class="btn btn-raised btn-info">{% trans 'All' %}</a>
-						{% for category in categories %}
-							<a href="?category={{category.name}}" class="btn btn-raised btn-primary">{{category.name}}</a>
-						{% endfor %}
-					</div>
-				</div>
+            </div>
+           <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10">
+                {% block breadcrumbs %}
+                    <div class="col-md-12">
+                        <form id="searchform" action="{% url 'course:manage' %}" method="get" accept-charset="utf-8">
+                            <div class="input-group">
+                              <div class="form-group is-empty">
+                              <input type="search" class="form-control" placeholder="Search Courses" name="q" id="searchbox"></div>
+                                <span class="input-group-btn input-group-sm">
+                                  <button type="button" class="btn btn-fab btn-fab-mini">
+                                    <i class="material-icons">search</i>
+                                  </button>
+                                </span>
+                            </div>
+                        </form>
+                    </div>
 
-				{% endblock %}
-				{% block render_breadcrumbs %}{% endblock %}
-			<div>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-				{% block content %}
-					{% for course in courses %}
-						<div class="panel panel-info panel_{{ course.id }}">
-					  		<div class="panel-heading">
-					    		<a href="{{ course.get_absolute_url }}" class="panel-title">{{course.name}}</a>
-					    		{% if user|show_course_subscribe:course %}
-				                    <a onclick="subscribe($(this), '{% url 'course:subscribe' course.slug %}', {{ course.id}}, '{% trans 'Are you sure you want to subscribe to this course?' %}')" class="btn btn-sm btn-primary btn-raised pull-right" style="margin-top:-4px">{% trans 'Subscribe' %}</a>
-				                {% endif %}
-					  		</div>
-					       
-						  	<div class="panel-body">
-						    	<p><b>{% trans 'Course Name'%}: </b>{{course.name}}</p>
-						    	<p><b>{% trans 'Begining'%}: </b>{{course.init_date}}</p>
-						    	<p><b>{% trans 'End' %}: </b>{{course.end_date}}</p>
-						    	<p><b>{% trans 'Professor' %}: </b>{{course.professors.name}}</p>
-						    	<p>
-							    <b>{% trans 'Description' %}:</b>
-							    <i>
-							        {{course.content}}
-							    </i>
-							    </p>
-							</div>
-						</div>
-					{% endfor %}
+                <div class="col-md-10">
+                    <div class="btn-group btn-group-justified btn-group-raised">
+                        <a href="?category=all" class="btn btn-raised btn-info">Todos</a>
+                        {% for category in categories %}
+                            <a href="?category={{category.name}}" class="btn btn-raised btn-primary">{{category.name}}</a>
+                        {% endfor %}
+                    </div>
+                </div>
 
-				{% endblock %}
-			</div>
-		</div>
-	</div>
-	<script src="{% static 'js/main.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/topic_editation_presentation.js' %}"></script>
-	{% block script_file %}
+                {% endblock %}
+                {% block render_breadcrumbs %}{% endblock %}
+            <div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-12">
+                {% block content %}
+                    {% for course in courses %}
+                        <div class="panel panel-info panel_{{ course.id }}">
+                            <div class="panel-heading">
+                                <a href="{{ course.get_absolute_url }}" class="panel-title">{{course.name}}</a>
+                                {% if user|show_course_subscribe:course %}
+                                    <a onclick="subscribe($(this), '{% url 'course:subscribe' course.slug %}', {{ course.id}}, '{% trans 'Are you sure you want to subscribe to this course?' %}')" class="btn btn-sm btn-primary btn-raised pull-right" style="margin-top:-4px">{% trans 'Subscribe' %}</a>
+                                {% endif %}
+                            </div>
 
-	{% endblock script_file %}
+                            <div class="panel-body">
+                                <p><b>Course Name: </b>{{course.name}}</p>
+                                <p><b>Begining: </b>{{course.init_date}}</p>
+                                <p><b>End: </b>{{course.end_date}}</p>
+                                <p><b>Professor: </b>{{course.professors.name}}</p>
+                                <p>
+                                <b>Description:</b>
+                                <i>
+                                    {{course.content}}
+                                </i>
+                                </p>
+                            </div>
+                        </div>
+                    {% endfor %}
+
+                {% endblock %}
+            </div>
+        </div>
+    </div>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/topic_editation_presentation.js' %}"></script>
+    {% block script_file %}
+
+    {% endblock script_file %}
 </body>
 
 </html>
