modifying file links #205

--- a/links/templates/links/update_link.html
+++ b/links/templates/links/update_link.html
@@ -1,3 +1,4 @@
+{% load widget_tweaks i18n %}
 <!-- MODAL LINK EDIT-->
 <div class="modal fade" id="linksModalEdit" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
