--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -52,58 +52,58 @@
 
 {% block content %}
   	<div class="panel panel-info">
-    	<div class="panel-heading course-detail">
-			<div class="row">
-	      		<div class="col-md-10 col-sm-10">
-	        		 <h4>{{subject}}</h4>
-	      		</div>
-				{% professor_subject subject user as subject_professor%}
-	      		{% if subject_professor %}
-		         	 <div class="col-xs-4 col-md-2 divMoreActions">
-			            <div class="btn-group">
-			              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			                <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-			              </button>
-			              <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
-			                <li><a href="javascript:void(0)"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
-			                <li><a href="{% url 'course:update_subject' subject.slug %}" <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
-			                <li><a href="{% url 'course:delete_subject' subject.slug %}" ><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
-			              </ul>
-			            </div>
-    				</div>
-				{% endif %}
-	    	</div>
-    	</div>
-    	<div class="panel-body">
-	      <p><b>{% trans "Professor" %}:</b> {{subject.professors}}</p>
-	      <p>
-	        <b>{% trans "Description" %}:</b>
-	          {{subject.description|linebreaks}}
-	      </p>
-	      <div class="row">
-	        <div class="col-xs-6 col-md-6">
-	          <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
-	        </div>
-	        <div class="col-xs-6 col-md-6">
-	          <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
-	        </div>
-	      </div>
-	    </div>
-	</div>
-
-	{% for topic in topics %}
-		{% professor_subject topic.subject user as topic_professor%}
-		{% if topic_professor %}
-			{% include "subject/form_view_teacher.html" %}
-		{% else %}
-			{% include "subject/form_view_student.html" %}
-		{% endif %}
-	{% endfor %}
-	{% professor_subject subject user as professor_sub %}
-	{% if professor_sub %}
-		<div class="form-group">
-            <a href="{% url 'course:create_topic' subject.slug %}" data-toggle="modal" data-target="" class="btn btn-primary btn-lg btn-block btn-raised" name="create_topic">{% trans "Create Topic" %}<div class="ripple-container"></div></a>
+     <div class="panel-heading course-detail">
+      <div class="row">
+       <div class="col-md-10 col-sm-10">
+        <h4>{{subject}}</h4>
+       </div>
+       <div class="col-xs-4 col-md-2 divMoreActions">
+        {% professor_subject subject user as subject_professor%}
+        {% if subject_professor %}
+         <div class="btn-group">
+          <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+          </button>
+          <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+           <li><a href="javascript:void(0)"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
+           <li><a href="{% url 'course:update_subject' subject.slug %}" <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
+           <li><a href="{% url 'course:delete_subject' subject.slug %}" ><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
+          </ul>
+         </div>
+         {% endif %}
+       </div>
+       </div>
+      </div>
+      <div class="panel-body">
+          <p><b>{% trans "Professor" %}:</b> {{subject.professors}}</p>
+          <p>
+            <b>{% trans "Description" %}:</b>
+              {{subject.description|linebreaks}}
+          </p>
+          <div class="row">
+            <div class="col-xs-6 col-md-6">
+              <p><b>{% trans "Beginning" %}:</b> {{subject.init_date}}</p>
+            </div>
+            <div class="col-xs-6 col-md-6">
+              <p><b>{% trans "End" %}:</b> {{subject.end_date}}</p>
+            </div>
           </div>
-	{% endif %}
-
+     </div>
+    </div>
+     {% for topic in topics %}
+      {% professor_subject topic.subject user as topic_professor%}
+      {% if topic_professor %}
+       {% include "subject/form_view_teacher.html" %}
+      {% else %}
+       {% include "subject/form_view_student.html" %}
+      {% endif %}
+     {% endfor %}
+     {% professor_subject subject user as professor_sub %}
+     {% if professor_sub %}
+     <div class="col-md-10">
+      <div class="form-group">
+       <a href="{% url 'course:create_topic' subject.slug %}" data-toggle="modal" data-target="" class="btn btn-primary btn-lg btn-block btn-raised" name="create_topic">{% trans "Create Topic" %}<div class="ripple-container"></div></a>
+      </div>
+     </div>
+     {% endif %}
 {% endblock %}
