--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -42,7 +42,7 @@
                                     </div>
                                     <div class="col-md-12 col-xs-12 col-lg-10 col-lg-offset-1 col-sm-12">
                                       <div class="form-group">
-                                        <label for="inputPassword" class="control-label"> {% trans 'Password' %}</label>
+                                        <label for="inputPassword" class="control-label"> {% trans 'password' %}</label>
                                         <input form="form-login" for="inputSmall" type="password" name="password" class="form-control" id="inputPassword" placeholder="Password">
                                       </div>
                                     </div>
@@ -61,7 +61,7 @@
                                   <a class="btn btn-default btn-raised btn-block" href="{% url 'core:guest' %}" formaction="#" style="position: initial;">{% trans 'Guest' %}</a>
                               </div>
                               <div class="col-md-10 col-sm-10 col-xs-10 col-lg-6 col-lg-offset-7 forgotPassword">
-                                  <a href="{% url 'core:password_reset' %}">{% trans "Forgot your password?" %}</a>
+                                  <a href="{% url 'core:password_reset' %}">{% trans 'Forgot your password?' %}</a>
                               </div>
                 </div>
               </div>
