--- a/core/templates/registration/passwor_reset_email.html
+++ b/core/templates/registration/passwor_reset_email.html
@@ -1,3 +1,5 @@
+{% load static i18n %}
+
 {% trans 'To initiate the password reset process for your {{ user.get_username }} TestSite Account,
 click the link below:' %}
 
