--- a/courses/templates/subject/form_view_student.html
+++ b/courses/templates/subject/form_view_student.html
@@ -32,7 +32,7 @@
           <div class="row">
             <div class="col-xs-6 col-md-6">
               <div class="resource_inline">
-                <h4>Material</h4>
+                <h4>{% trans 'Material' %}</h4>
               </div>
               <ul id="list-materials">
                   {% list_topic_file request topic %}
@@ -42,7 +42,7 @@
             </div>
             <div class="col-xs-4 col-md-4">
               <div class="resource_inline">
-                <h4>Activities</h4>
+                <h4>{% trans 'Activities' %}</h4>
               </div>
               <ul>
 
