--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -18,7 +18,7 @@
 {% block sidebar %}
 <div class="panel panel-primary">
     <div class="panel-heading">
-        <h4>Menu</h4>
+        <h4>{% trans 'Menu' %}</h4>
     </div>
     <div class="panel-body">
         <ul class="nav nav-pills nav-stacked">
