--- a/exam/templates/exam/multiple_choice_question.html
+++ b/exam/templates/exam/multiple_choice_question.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <div class="form-group" id="multipleChoice">
 
   <label for="questionName" class="col-md-2 control-label">{% trans 'Question' %}</label>
