--- a/users/templates/list_users.html
+++ b/users/templates/list_users.html
@@ -42,7 +42,7 @@
             </div>
             <div class="col-md-1 col-sm-1 col-xs-1">
                 <button type="submit" class="btn btn-fab btn-fab-mini">
-                    <i class="material-icons">Search</i>
+                    <i class="material-icons">{% trans 'Search' %}</i>
                 </button>
             </div>
         </div>
