--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -54,7 +54,7 @@
 									<td></td>
 								</tr>
 								<tr>
-									<td>{% trans "Nome" %}:</td>
+									<td>{% trans "Name" %}:</td>
 									<td>{{user}}</td>
 								</tr>
 								<tr>
@@ -74,7 +74,7 @@
 						<table class="table table-hover table-edited">
 							<tbody>
 								<tr>
-									<td>{% trans "Tipo de Usuário" %}:</td>
+									<td>{% trans "User role" %}:</td>
 									{% if user.type_profile == 1 %}
 										<td>{% trans "Teacher" %}</td>
 									{% else %}
