--- a/core/templates/lembrar_senha.html
+++ b/core/templates/lembrar_senha.html
@@ -98,23 +98,23 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 <div id="institutional_menu">
 
-	<span><a href="/amadeuslms/fProject.do" target="_blank">{% trans 'O Projeto' %}</a></span>
+	<span><a href="/amadeuslms/fProject.do" target="_blank">{% trans 'The Project' %}</a></span>
 	<span>&nbsp;|&nbsp;</span>
-	<span><a href="/amadeuslms/fCCTE.do" target="_blank">{% trans 'Grupo CCTE' %}</a></span>
+	<span><a href="/amadeuslms/fCCTE.do" target="_blank">{% trans 'CCTE Group' %}</a></span>
 </div>
 		<div id="pTitle" class="pTitle">
-			<h2>{% trans 'Lembrar senha' %}</h2>
+			<h2>{% trans 'Remember password' %}</h2>
 		</div>
 		<div id="pBreadCrumbs" class="pBreadCrumbs">
 			<ul id="breadcrumb">
-				<li><a href="{% url 'home' %}">{% trans 'Página Inicial' %}</a></li>
-				<li>{%trans 'Lembrar senha' %}</li>
+				<li><a href="{% url 'home' %}">{% trans 'Home' %}</a></li>
+				<li>{%trans 'Remember password' %}</li>
 			</ul>
 		</div>
 		<div id="pLeftMenu" class="pLeftMenu">
 			<div id="side_menu_1">
 				<ul id="menu_sessoes">
-					<li><a href="{% url 'create_account' %}" class="insert">{% trans 'Nova conta' %}</a></li>
+					<li><a href="{% url 'create_account' %}" class="insert">{% trans 'New account' %}</a></li>
 			    </ul>
 			</div>
 		</div>
@@ -123,9 +123,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 				<form name="remindPasswordForm" method="post" action="/amadeuslms/remindPassword.do">
-				<dt>{% trans 'Endereço de e-mail' %}</dt>
+				<dt>{% trans 'Email' %}</dt>
 					<dd><input type="text" name="email" value="" class="formfield2" id="username"></dd>
-					<dd class="description">{% trans 'Seu endereço de e-mail (exemplo@mail.com)' %}</dd>
+					<dd class="description">{% trans 'Your Email address (exemple@mail.com)' %}</dd>
 					<dt class="field"><input type="submit" name="remindPassword" value="Enviar e-mail" class="button"></dt>
 				</form>
 <script type="text/javascript" language="JavaScript">
@@ -160,7 +160,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 
 <div id="footnote">
-	<dl><dd>{% trans 'Copyright Amadeus. Todos os direitos reservados' %}<dd></dl>
+	<dl><dd>{% trans 'Copyright Amadeus. All rights reserved' %}<dd></dl>
 </div>
 
 	</div>
