--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -77,7 +77,7 @@
           <input type="search" class="form-control" placeholder="Search Courses" name="q" id="searchbox"></div>
             <span class="input-group-btn input-group-sm">
               <button type="button" class="btn btn-fab btn-fab-mini">
-                <i class="material-icons">{% trans 'Search' %}</i>
+                <i class="material-icons">search</i>
               </button>
             </span>
         </div>
